--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,22 @@ body {
  color: #333;
  margin: 0px;
 }
+header {
+    background-image: radial-gradient(circle, #72d6c9, #54d1ed, #7ac5ff, #bcb2fe, #f29cd9);
+    height: 80px;
+}
+.nav-logo {
+    color: #e00986;
+    font-size: 25px;
+    margin: 0;
+    padding-left: 15px;
+    float: left;
+    line-height: 80px;
+}
+nav ul {
+    float: right;
+
+}
+.clear {
+    clear: both;
+}
