--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,45 @@ header {
     line-height: 80px;
 }
 nav ul {
+    list-style-type: none;
     float: right;
-
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+nav ul li {
+    display: inline-block;
+    position: relative;
+    width: 150px;
+}
+nav ul li a {
+    text-decoration: none;
+    color: #e00986;
+    line-height: 80px;
+    padding: 0 10px;
+    display: block;
+}
+nav ul li a:hover {
+    color: #333;
+    transition-duration: 2s;
+}
+nav ul ul {
+    background-image: radial-gradient(circle, #72d69c, #54d1ed, #7ac5ff, #bcbdfe, #f29cd9);
+    text-align: left;
+    width: 100%;
+    border: 1px solid #e00986;
+    display: none;
+}
+nav ul ul li {
+    display: block;
+}
+nav ul ul li a {
+    padding: 0 15px;
+}
+nav ul li:hover > ul {
+    display: block;
+    position: absolute;
+    z-index: 1;
 }
 .clear {
     clear: both;
