Add styles to hero section

--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,33 @@ nav ul li:hover > ul {
 .clear {
     clear: both;
 }
+.hero-section {
+    background-image: url(https://images.unsplash.com/photo-1524135329990-07660cd5bf10?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=43a5d559c87d4e7dea909d8db0a1cabf&auto=format&fit=crop&w=401&q=80);
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.slogan {
+    width: 80px;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+.slogan h2 {
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    text-align: center;
+}
+.slogan h2 span {
+    color: #e00986;
+}
+.yellow-text {
+    font-size: 40px;
+    color: #fbb619!important;
+}
