Add google fonts indieflower to text logo

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header {
     height: 80px;
 }
 .nav-logo {
+    font-family: "Indie Flower" , sans-serif;
     color: #e00986;
     font-size: 25px;
     margin: 0;
