Add style to about section

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ nav ul li:hover > ul {
     overflow: hidden;
 }
 .slogan {
-    width: 80px;
+    width: 80%;
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 50%;
@@ -98,4 +98,23 @@ nav ul li:hover > ul {
 .yellow-text {
     font-size: 40px;
     color: #fbb619!important;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 10px 20px;
+}
+.about-section {
+    width: 100%;
+    background-color: #f29cd9;
+}
+.about-section h2 {
+    margin: 0;
+    padding: 20px;
+    font-size: 30px;
+}
+.about-section img {
+    height: 350px;
+    margin: 10px auto 30px;
+    display: block;
 }
